# CppCompileDependencies

./: CMakeLists.txt  LICENSE  README.md
bad/: CMakeLists.txt  Config.cpp  Config.h
good/: CMakeLists.txt  Config.cpp  Config.h  ConfigUserH.cpp
